logs/dag_id=ltv-pipeline/run_id=manual__2022-08-03T00:34:58+00:00/task_id=query-table/attempt=1.log
[2022-08-03 00:35:08,988] {taskinstance.py:1179} INFO - Dependencies all met for <TaskInstance: ltv-pipeline.query-table manual__2022-08-03T00:34:58+00:00 [queued]>
[2022-08-03 00:35:09,009] {taskinstance.py:1179} INFO - Dependencies all met for <TaskInstance: ltv-pipeline.query-table manual__2022-08-03T00:34:58+00:00 [queued]>
[2022-08-03 00:35:09,012] {taskinstance.py:1376} INFO - 
--------------------------------------------------------------------------------
[2022-08-03 00:35:09,015] {taskinstance.py:1377} INFO - Starting attempt 1 of 1
[2022-08-03 00:35:09,020] {taskinstance.py:1378} INFO - 
--------------------------------------------------------------------------------
[2022-08-03 00:35:09,044] {taskinstance.py:1397} INFO - Executing <Task(PythonOperator): query-table> on 2022-08-03 00:34:58+00:00
[2022-08-03 00:35:09,053] {standard_task_runner.py:52} INFO - Started process 1942 to run task
[2022-08-03 00:35:09,058] {standard_task_runner.py:79} INFO - Running: ['***', 'tasks', 'run', 'ltv-pipeline', 'query-table', 'manual__2022-08-03T00:34:58+00:00', '--job-id', '6', '--raw', '--subdir', 'DAGS_FOLDER/dag-test.py', '--cfg-path', '/tmp/tmpx0_8mgkc', '--error-file', '/tmp/tmpy2ht38rk']
[2022-08-03 00:35:09,062] {standard_task_runner.py:80} INFO - Job 6: Subtask query-table
[2022-08-03 00:35:09,150] {task_command.py:371} INFO - Running <TaskInstance: ltv-pipeline.query-table manual__2022-08-03T00:34:58+00:00 [running]> on host dc3eb4614e33
[2022-08-03 00:35:09,268] {taskinstance.py:1591} INFO - Exporting the following env vars:
AIRFLOW_CTX_DAG_OWNER=***
AIRFLOW_CTX_DAG_ID=ltv-pipeline
AIRFLOW_CTX_TASK_ID=query-table
AIRFLOW_CTX_EXECUTION_DATE=2022-08-03T00:34:58+00:00
AIRFLOW_CTX_TRY_NUMBER=1
AIRFLOW_CTX_DAG_RUN_ID=manual__2022-08-03T00:34:58+00:00
[2022-08-03 00:35:09,277] {logging_mixin.py:115} INFO - Testing hook
[2022-08-03 00:35:09,294] {base.py:68} INFO - Using connection ID 'postgres' for task execution.
[2022-08-03 00:35:09,313] {taskinstance.py:1909} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/operators/python.py", line 171, in execute
    return_value = self.execute_callable()
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/operators/python.py", line 189, in execute_callable
    return self.python_callable(*self.op_args, **self.op_kwargs)
  File "/opt/airflow/dags/dag-test.py", line 13, in query_table
    results = post_hook.get_records('SELECT * FROMS users')
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/hooks/dbapi.py", line 162, in get_records
    cur.execute(sql)
psycopg2.errors.SyntaxError: syntax error at or near "FROMS"
LINE 1: SELECT * FROMS users
                 ^

[2022-08-03 00:35:09,350] {taskinstance.py:1420} INFO - Marking task as FAILED. dag_id=ltv-pipeline, task_id=query-table, execution_date=20220803T003458, start_date=20220803T003508, end_date=20220803T003509
[2022-08-03 00:35:09,420] {standard_task_runner.py:97} ERROR - Failed to execute job 6 for task query-table (syntax error at or near "FROMS"
LINE 1: SELECT * FROMS users
                 ^
; 1942)
[2022-08-03 00:35:09,494] {local_task_job.py:156} INFO - Task exited with return code 1
[2022-08-03 00:35:09,560] {local_task_job.py:273} INFO - 0 downstream tasks scheduled from follow-on schedule check
